test/files/pos/t2413/TestJava.java
package pack;

public class TestJava {
    protected String repeatParam(String ... items) {
        return "nothing";
    }
}
