test/files/neg/t2296a/J.java
package j;

public class J {
  protected void foo() {
    System.out.println("J.foo()");
  }
}